@@ -1,5 +1,10 @@
 2010-06-14  Colin Watson  <cjwatson@ubuntu.com>
 
+	* util/grub-mkconfig.in: Remove vestige of old argument parsing that
+	left this script non-functional.
+
+2010-06-14  Colin Watson  <cjwatson@ubuntu.com>
+
 	* docs/man/grub-emu.h2m: New file.
 
 2010-06-13  Colin Watson  <cjwatson@ubuntu.com>
